# rail_attic

./: .flake8  .gitignore  .pylintrc  .readthedocs.yaml  .readthedocs.yml  KNearNeighPDF.pkl  LICENSE  PZflowPDF.pkl  README.md  TEMPZFILE.out  clean_nb_cruft.sh  do_cover.sh  dsps_reqs.txt  hsc_ratios.csv  model.tmp  parametersTest.cfg  pyproject.toml  render_nb.py  render_nb.sh  requirements.txt  settings.pickle  setup.py  testmodel_bpz.pkl  wishlist.ipynb
.github/workflows/: buildreqs.yml  main.yml  rebuild-notebooks.yaml  run-all-notebooks.yaml
creation/: README.md
degradation/: README.md
doc/notebooks/: RAIL_estimation_demo.ipynb
docs/: .gitignore  Makefile  README.md  conf.py  conf_igen.pyyyyy  conf_prestyle.pyyyyy  conf_prestylemore.pyyyy  conf_testing.py  doc-config.ini  index.rst  modules.rst  nbconvert-requirements.txt  rail.creation.rst  rail.estimation.algos.flexzboost.rst  rail.estimation.algos.randomPZ.rst  rail.estimation.algos.rst  rail.estimation.algos.sklearn_nn.rst  rail.estimation.algos.trainZ.rst  rail.estimation.estimator.rst  rail.estimation.rst  rail.estimation.utils.rst  rail.evaluation.rst  rail.rst  readthedocs.yml  requirements.txt
docs/_templates/: breadcrumbs.html
docs/docs/: conf_prestyle.rst  modules.rst
docs/notebooks/: Test_rearranged_evaluation.ipynb
docs/source/: citing.rst  contributing.rst  core-notebooks.rst  creation-notebooks.rst  estimation-notebooks.rst  futureplans.rst  immediateplans.rst  index_body.rst  installation.rst  other-notebooks.rst  overview.rst
docs_feb27cleanest/: conf.py  index.rst
estimation/: README.md
evaluation/: README.md
examples/: HowToDelightPZ.md  base.yaml  config.yml  eval.py  evaluation.py  evaluator.py  main.py  run_generic.sh  setup_ceci  testdata.hdf5
examples/configs/: BPZ_lite.yaml  FZBoost.yaml  buzzardCatLoader.yaml  delightPZ.yaml  nonexist.yaml  randomPZ.yaml  simpleNN.yaml  trainZ.yaml  trytworuns.yaml
examples/core/: FileIO_DataStore.ipynb  Pipe_Example.ipynb  Run_Pipe.ipynb  cleanup.sh  hyperbolic_magnitude_test.ipynb  iterator_test.ipynb  pipe_example.yml  pipe_example_config.yml
examples/core_examples/: FileIO_DataStore.ipynb  FluxtoMag_and_Deredden_example.ipynb  Pipe_Example.ipynb  README.md  Run_Pipe.ipynb  cleanup.sh  hyperbolic_magnitude_test.ipynb  iterator_test.ipynb  pipe_example.yml  pipe_example_config.yml
examples/creation/: README.md  basic-creation-demo.ipynb  degradation-demo-extended.ipynb  degradation-demo.html  degradation-demo.ipynb  dsps_sed_demo.ipynb  example_GridSelection_for_HSC.ipynb  example_ObsConditions.ipynb  example_SpecSelection_for_HSC.ipynb  example_SpecSelection_for_zCOSMOS.ipynb  output.pq  output_error_model.pq  output_error_model_extended.pq  output_truth.pq  photometric_realization_demo.ipynb  posterior-demo.html  posterior-demo.ipynb  spec-demo.ipynb  toy-demo.ipynb
examples/creation_examples/: README.md  cleanup.sh  degradation-demo.ipynb  dsps_sed_demo.ipynb  (+5 more)
public/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  rail.creation.html  rail.estimation.algos.flexzboost.html  rail.estimation.algos.html  rail.estimation.algos.randomPZ.html  rail.estimation.algos.sklearn_nn.html  rail.estimation.algos.trainZ.html  rail.estimation.estimator.html  rail.estimation.html  rail.estimation.utils.html  rail.evaluation.html  rail.html  search.html  searchindex.js  setup.html
rail/: README.md  __init__.py  __main__.py  _version.py  environment.yml  fileIO.py  main.py  version.py
scripts/: catalog_loader.py
tests/: README.md  base.yaml  delightPZ.yaml  setup.py  test.yaml  test_algos.py  test_brier.py  test_core.py  test_degraders.py  test_delight_extras.py  test_dsps_interface.py  test_estimator.py  test_evaluation.py  test_filIO.py  test_fileIO.py  test_golden.py  test_nzestimators.py  test_random.py  test_som_summarizers.py  test_somoclu_summarizers.py  test_stages.py  test_summarizers.py  test_utils.py
(+667 files in other folders)
